--- a/admin/adashboard.html
+++ b/admin/adashboard.html
@@ -44,7 +44,6 @@
     </div>  
     <div class="footer"> 
       <p>iReporter &#169 2018 </p>
-      <p>Contact information: <a href="mailto:info@ireporter.com">info@ireporter.com</a>.</p>
-</div>
+      <p>Contact information: <a href="mailto:info@ireporter.com">info@ireporter.com</a>.</p></div>
 </body>
 </html>
