--- a/UI/user.html
+++ b/UI/user.html
@@ -12,8 +12,8 @@
 
 <div class="header">
   <div class="topnav">
-    <img src="images/image.png"/>
-    <label for="toggle">&#9776;</label>
+      <a href = "home.html"><img src="images/image.png"></img></a>
+      <label for="toggle">&#9776;</label>
     <input type="checkbox" id="toggle">
     <div class="menu">
       <a href="home.html">Home</a>
