--- a/admin/arecords.html
+++ b/admin/arecords.html
@@ -11,8 +11,8 @@
 <body>
   <div class="header">
     <div class="topnav">
-      <img src="../images/image.png"/>
-      <label for="toggle">&#9776;</label>
+        <a href = "../home.html"><img src="../images/image.png"></img></a>
+        <label for="toggle">&#9776;</label>
       <input type="checkbox" id="toggle">
       <div class="menu">
         <a href="adashboard.html">Dashboard</a>
