--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 
 <div class="header">
   <div class="topnav">
-    <img src="images/image.png"/>
+    <a href = "home.html"><img src="images/image.png"></img></a>
     <label for="toggle">&#9776;</label>
     <input type="checkbox" id="toggle">
     <div class="menu">
@@ -54,7 +54,6 @@
 <div class="footer">
   <p>iReporter &#169 2018 </p>
   <p>Contact information: <a href="mailto:info@ireporter.com">info@ireporter.com</a>.</p>
-  <a href="home.html">Home</a>
 </div>
 </body>
 </html>
