--- a/UI/admin/dashboard.html
+++ b/UI/admin/dashboard.html
@@ -4,29 +4,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <title>iReporter</title>
-  <link rel="stylesheet" type="text/css" href="css/base.css">
+  <link rel="stylesheet" type="text/css" href="../css/base.css">
 </head>
 
 <body>
   <div class="header">
     <div class="topnav">
-        <a href = "home.html"><img src="images/image.png"></img></a>
+        <a href = "../home.html"><img src="../images/image.png"></img></a>
         <label for="toggle">&#9776;</label>
       <input type="checkbox" id="toggle">
       <div class="menu">
-        <a class="active" href="#Home">Home</a>
-        <a href="user.html">Profile</a>
-        <a href="addredflag.html">Red Flags</a>
-        <a href="addinterven.html">Interventions</a>
-        <a href="login.html">Logout</a>
+        <a class="active" href="#">Dashboard</a>
+        <a href="records.html">Records</a>
+        <!--<a href="addredflag.html">Red Flags</a>
+        <a href="addinterven.html">Interventions</a>-->
+        <a href="../login.html">Logout</a>
       </div>
     </div>
   </div>
   <div class="central">
     <div class="leftcolumn">
       <div class="card">
-        <h4>Welcome, Username. Report All Injustice</h4>
-        <img src="images/ireport.png"/>
+        <h4>Administrator Dashboard</h4>
+        <img src="../images/python.jpg"/>
       </div>
     </div>
     <div class="rightcolumn">
@@ -34,19 +34,16 @@
         <span style="color: #FF0000">0800100770 | 0772634743</span></span> </p>
         <div class="form">
           <p></p>
-          <p><a href="#">Home</a><p>
-            <p><a href="addredflag.html">Red Flags</a></p>
+          <p><a href="../home.html">User-Home</a><p>
+          <!--  <p><a href="addredflag.html">Red Flags</a></p>
             <p><a href="addinterven.html">Interventions</a><p>
-            <p><a href="login.html">Logout</a></p>
+            <p><a href="login.html">Logout</a></p>-->
           </div>
         </div>
       </div>
-    </div>
-    
+    </div>  
     <div class="footer"> 
       <p>iReporter &#169 2018 </p>
-      <p>Contact information: <a href="mailto:info@ireporter.com">info@ireporter.com</a>.</p>
-      <a href="admin/dashboard.html">Admin</a>
-</div>
+      <p>Contact information: <a href="mailto:info@ireporter.com">info@ireporter.com</a>.</p></div>
 </body>
 </html>
