--- a/UI/login.html
+++ b/UI/login.html
@@ -7,16 +7,15 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
-
 <body>
 
 <div class="header">
   <div class="topnav">
-      <a href = "home.html"><img src="images/image.png"></img></a>
-      <label for="toggle">&#9776;</label>
+    <a href = "home.html"><img src="images/image.png"></img></a>
+    <label for="toggle">&#9776;</label>
     <input type="checkbox" id="toggle">
     <div class="menu">
-      <a href="#"><span>Login</span></a>
+      <a class="active" href="Login">Login</a>
       <a href="signup.html">Signup</a>
       <!-- <a href="#">Services</a>
       <a href="#">FAQs</a> -->
@@ -55,7 +54,6 @@
 <div class="footer">
   <p>iReporter &#169 2018 </p>
   <p>Contact information: <a href="mailto:info@ireporter.com">info@ireporter.com</a>.</p>
-  <a href="home.html">Home</a>
 </div>
 </body>
 </html>
