--- a/UI/user.html
+++ b/UI/user.html
@@ -17,7 +17,7 @@
     <input type="checkbox" id="toggle">
     <div class="menu">
       <a href="home.html">Home</a>
-      <a href="user.html"><span>Profile</span></a>
+      <a class="active" href="user.html">Profile</a>
       <a href="addredflag.html">Red Flags</a>
       <a href="addinterven.html">Interventions</a>
       <a href="login.html">Logout</a>
