--- a/UI/viewinterven.html
+++ b/UI/viewinterven.html
@@ -17,7 +17,7 @@
       <div class="menu">
         <a href="home.html">Home</a>
         <a href="viewred.html">View Redflags</a>
-        <a href="viewinterven.html"><span>View Interventions</span></a>
+        <a class="active" href="viewinterven.html">View Interventions</a>
         <a href="login.html">Logout</a>
       </div>
     </div>
@@ -81,7 +81,7 @@
             <div class="form">
               <p>Welcome!</p>
               <p><a href="home.html">Home</a><p>
-                <p><a href="addredflag.html">Add Redflag</a><p>
+                <p><a href="addredflag.html">Red Flags</a><p>
                   <p><a href="addinterven.html">Interventions</a><p>
 
                   </div>
