--- a/admin/records.html
+++ b/admin/records.html
@@ -15,8 +15,8 @@
         <label for="toggle">&#9776;</label>
       <input type="checkbox" id="toggle">
       <div class="menu">
-        <a href="adashboard.html">Dashboard</a>
-        <a href="arecords.html"><span>Records</span></a>
+        <a href="dashboard.html">Dashboard</a>
+        <a class="active" href="records.html">Records</a>
         <!--<a href="viewinterven.html">View Interventions</a>-->
         <a href="../login.html">Logout</a>
       </div>
