--- a/UI/home.html
+++ b/UI/home.html
@@ -14,7 +14,7 @@
         <label for="toggle">&#9776;</label>
       <input type="checkbox" id="toggle">
       <div class="menu">
-        <a href="#"><span>Home</span></a>
+        <a class="active" href="#Home">Home</a>
         <a href="user.html">Profile</a>
         <a href="addredflag.html">Red Flags</a>
         <a href="addinterven.html">Interventions</a>
@@ -46,7 +46,7 @@
     <div class="footer"> 
       <p>iReporter &#169 2018 </p>
       <p>Contact information: <a href="mailto:info@ireporter.com">info@ireporter.com</a>.</p>
-      <a href="admin/adashboard.html">Admin</a>
+      <a href="admin/dashboard.html">Admin</a>
 </div>
 </body>
 </html>
