--- a/UI/signup.html
+++ b/UI/signup.html
@@ -18,7 +18,7 @@
     <input type="checkbox" id="toggle">
     <div class="menu">
       <a href="login.html">Login</a>
-      <a href="#"><span>Signup</span></a>
+      <a class="active" href="#Signup">Signup</a>
       <!--<a href="#">Services</a>
         <a href="#">FAQs</a>-->
       </div>
