--- a/addinterven.html
+++ b/addinterven.html
@@ -17,8 +17,8 @@
         <div class="menu">
           <a href="home.html">Home</a>
           <a href="user.html">Profile</a>
-          <a href="addredflag.html">Red Flag</a>
-          <a href="addinterven.html"><span>Intervention</span></a>
+          <a href="addredflag.html">Red Flags</a>
+          <a class="active" href="addinterven.html">Interventions</a>
           <a href="login.html">Logout</a>
         </div>
       </div>
@@ -69,8 +69,8 @@
           <div class="form">
             <p>Welcome to Dashboard.</p>
             <p><a href="home.html">Home</a><p>
-            <p><a href="viewinterven.html">View Intervention</a></p>
             <p><a href="viewred.html">View Redflags</a><p>
+            <p><a href="viewinterven.html">View Interventions</a></p>
 
             </div>
           </div>
