--- a/addredflag.html
+++ b/addredflag.html
@@ -18,8 +18,8 @@
       <div class="menu">
         <a href="home.html">Home</a>
         <a href="user.html">Profile</a>
-        <a href="addredflag.html"><span>Report</span></a>
-        <a href="addinterven.html">Intervention</a>
+        <a class="active" href="addredflag.html">Red Flags</a>
+        <a href="addinterven.html">Interventions</a>
         <a href="login.html">Logout</a>
       </div>
     </div>
