--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -14,8 +14,8 @@
         <label for="toggle">&#9776;</label>
       <input type="checkbox" id="toggle">
       <div class="menu">
-        <a href="#"><span>Dashboard</span></a>
-        <a href="arecords.html">Records</a>
+        <a class="active" href="#">Dashboard</a>
+        <a href="records.html">Records</a>
         <!--<a href="addredflag.html">Red Flags</a>
         <a href="addinterven.html">Interventions</a>-->
         <a href="../login.html">Logout</a>
