--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
     <label for="toggle">&#9776;</label>
     <input type="checkbox" id="toggle">
     <div class="menu">
-      <a href="#"><span>Login</span></a>
+      <a class="active" href="Login">Login</a>
       <a href="signup.html">Signup</a>
       <!-- <a href="#">Services</a>
       <a href="#">FAQs</a> -->
