--- a/updatered.html
+++ b/updatered.html
@@ -17,8 +17,8 @@
       <input type="checkbox" id="toggle">
       <div class="menu">
         <a href="home.html">Home</a>
-        <a href="addredflag.html"><span>Report</span></a>
-        <a href="addinterven.html">Intervention</a>
+        <a class="active" href="addredflag.html">Red Flags</a>
+        <a href="addinterven.html">Interventions</a>
         <a href="login.html">Logout</a>
       </div>
     </div>
