--- a/viewred.html
+++ b/viewred.html
@@ -15,7 +15,7 @@
       <input type="checkbox" id="toggle">
       <div class="menu">
         <a href="home.html">Home</a>
-        <a href="viewred.html"><span>View Redflags</span></a>
+        <a class="active" href="viewred.html">View Redflags</a>
         <a href="viewinterven.html">View Interventions</a>
         <a href="login.html">Logout</a>
       </div>
@@ -82,7 +82,7 @@
             <div class="form">
               <p>Welcome!</p>
               <p><a href="home.html">Home</a><p>
-              <p><a href="addredflag.html">Add Redflag</a><p>
+              <p><a href="addredflag.html">Red Flags</a><p>
               <p><a href="addinterven.html">Interventions</a><p>
 
               </div>
