--- a/user.html
+++ b/user.html
@@ -131,7 +131,7 @@
         </div>
       </div>
     </div>
-    <p><button>Contact</button></p>
+    <p><a href="tel:+256-781-454-344"><button>Call Me</button></a></p>
   </div>
 </div>
 <div class="rightcolumn">
